--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
     </svg>
   </label>
   <div class="ae-container-fluid rk-topbar">
-    <h1 class="rk-logo"><a href="index.html">urku portfolio<sup>tm</sup></a></h1>
+    <h1 class="rk-logo"><a href="index.html">Juanito´s portfolio<sup>tm</sup></a></h1>
     <nav class="rk-navigation">
       <ul class="rk-menu">
         <li class="rk-menu__item"><a href="index.html" class="rk-menu__link">Home</a>
@@ -33,6 +33,7 @@
         <li class="rk-menu__item"><a href="contact.html" class="rk-menu__link">Contact Us</a>
         </li>
       </ul>
+
       <form class="rk-search">
         <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
         <label for="urku-search">
@@ -41,6 +42,7 @@
           </svg>
         </label>
       </form>
+
     </nav>
   </div>
 </header>
