creada pages y portfolio template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <app-header></app-header>
-
-
-
-
-<h3>Hola body </h3>
-
-
-
+  <section class="ae-container-fluid rk-main">
+    <app-portfolio></app-portfolio>
+  </section>
 <app-footer></app-footer>
