--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
+body{
+  padding: 1em;
+  background: white;
+  color: #777;
+  text-align: center;
+  font-family: "Gill sans", sans-serif;
+  width: 80%;
+  margin: 0 auto;
+}
+
+
+/*
+  Color del Loading
+*/
+svg path,
+svg rect{
+  fill: black;
+}
+
 .animated_robert {
   display: inline-block;
 
@@ -18,3 +37,4 @@
   animation: fadeIn; /*referring directly to the animation's @keyframe declaration*/
   animation-duration: 3s; /* don't forget to set a duration!*/
 }
+
